crates/parser/tests/snapshots/statements/valid/0027.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "GRANT UPDATE ON accounts TO joe;\n"
---
GrantStmt@0..32
  Grant@0..5 "GRANT"
  Whitespace@5..6 " "
  AccessPriv@6..12
    Update@6..12 "UPDATE"
  Whitespace@12..13 " "
  On@13..15 "ON"
  Whitespace@15..16 " "
  RangeVar@16..24
    Ident@16..24 "accounts"
  Whitespace@24..25 " "
  To@25..27 "TO"
  Whitespace@27..28 " "
  RoleSpec@28..31
    Ident@28..31 "joe"
  Ascii59@31..32 ";"

