crates/parser/tests/snapshots/statements/valid/0028.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "REVOKE ALL ON accounts FROM PUBLIC;\n"
---
GrantStmt@0..36
  Revoke@0..6 "REVOKE"
  Whitespace@6..7 " "
  All@7..10 "ALL"
  Whitespace@10..11 " "
  On@11..13 "ON"
  Whitespace@13..14 " "
  Ident@14..22 "accounts"
  Whitespace@22..23 " "
  From@23..27 "FROM"
  Whitespace@27..28 " "
  Ident@28..34 "PUBLIC"
  Ascii59@34..35 ";"
  Newline@35..36 "\n"

