crates/parser/tests/snapshots/statements/valid/0031.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE POLICY user_mod ON passwd FOR UPDATE\n  USING (current_user = user_name)\n  WITH CHECK (\n    current_user = user_name AND\n    shell IN ('/bin/bash','/bin/sh','/bin/dash','/bin/zsh','/bin/tcsh')\n  );\n"
---
CreatePolicyStmt@0..204
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Policy@7..13 "POLICY"
  Whitespace@13..14 " "
  Ident@14..22 "user_mod"
  Whitespace@22..23 " "
  On@23..25 "ON"
  Whitespace@25..26 " "
  Ident@26..32 "passwd"
  Whitespace@32..33 " "
  For@33..36 "FOR"
  Whitespace@36..37 " "
  Update@37..43 "UPDATE"
  Newline@43..44 "\n"
  Whitespace@44..46 "  "
  Using@46..51 "USING"
  Whitespace@51..52 " "
  Ascii40@52..53 "("
  CurrentUser@53..65 "current_user"
  Whitespace@65..66 " "
  Ascii61@66..67 "="
  Whitespace@67..68 " "
  Ident@68..77 "user_name"
  Ascii41@77..78 ")"
  Newline@78..79 "\n"
  Whitespace@79..81 "  "
  With@81..85 "WITH"
  Whitespace@85..86 " "
  Check@86..91 "CHECK"
  Whitespace@91..92 " "
  Ascii40@92..93 "("
  Newline@93..94 "\n"
  Whitespace@94..98 "    "
  CurrentUser@98..110 "current_user"
  Whitespace@110..111 " "
  Ascii61@111..112 "="
  Whitespace@112..113 " "
  Ident@113..122 "user_name"
  Whitespace@122..123 " "
  And@123..126 "AND"
  Newline@126..127 "\n"
  Whitespace@127..131 "    "
  Ident@131..136 "shell"
  Whitespace@136..137 " "
  InP@137..139 "IN"
  Whitespace@139..140 " "
  Ascii40@140..141 "("
  Sconst@141..152 "'/bin/bash'"
  Ascii44@152..153 ","
  Sconst@153..162 "'/bin/sh'"
  Ascii44@162..163 ","
  Sconst@163..174 "'/bin/dash'"
  Ascii44@174..175 ","
  Sconst@175..185 "'/bin/zsh'"
  Ascii44@185..186 ","
  Sconst@186..197 "'/bin/tcsh'"
  Ascii41@197..198 ")"
  Newline@198..199 "\n"
  Whitespace@199..201 "  "
  Ascii41@201..202 ")"
  Ascii59@202..203 ";"
  Newline@203..204 "\n"

