crates/parser/tests/snapshots/statements/valid/0032.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "SET search_path TO myschema,public;\n"
---
VariableSetStmt@0..36
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..15 "search_path"
  Whitespace@15..16 " "
  To@16..18 "TO"
  Whitespace@18..19 " "
  Ident@19..27 "myschema"
  Ascii44@27..28 ","
  Ident@28..34 "public"
  Ascii59@34..35 ";"
  Newline@35..36 "\n"

