crates/parser/tests/snapshots/statements/valid/0033.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE TABLE measurement (\n    city_id         int not null,\n    logdate         date not null,\n    peaktemp        int,\n    unitsales       int\n) PARTITION BY RANGE (logdate);\n"
---
CreateStmt@0..177
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  Ident@13..24 "measurement"
  Whitespace@24..25 " "
  Ascii40@25..26 "("
  Newline@26..27 "\n"
  Whitespace@27..31 "    "
  Ident@31..38 "city_id"
  Whitespace@38..47 "         "
  IntP@47..50 "int"
  Whitespace@50..51 " "
  Not@51..54 "not"
  Whitespace@54..55 " "
  NullP@55..59 "null"
  Ascii44@59..60 ","
  Newline@60..61 "\n"
  Whitespace@61..65 "    "
  Ident@65..72 "logdate"
  Whitespace@72..81 "         "
  Ident@81..85 "date"
  Whitespace@85..86 " "
  Not@86..89 "not"
  Whitespace@89..90 " "
  NullP@90..94 "null"
  Ascii44@94..95 ","
  Newline@95..96 "\n"
  Whitespace@96..100 "    "
  Ident@100..108 "peaktemp"
  Whitespace@108..116 "        "
  IntP@116..119 "int"
  Ascii44@119..120 ","
  Newline@120..121 "\n"
  Whitespace@121..125 "    "
  Ident@125..134 "unitsales"
  Whitespace@134..141 "       "
  IntP@141..144 "int"
  Newline@144..145 "\n"
  Ascii41@145..146 ")"
  Whitespace@146..147 " "
  Partition@147..156 "PARTITION"
  Whitespace@156..157 " "
  By@157..159 "BY"
  Whitespace@159..160 " "
  Range@160..165 "RANGE"
  Whitespace@165..166 " "
  Ascii40@166..167 "("
  Ident@167..174 "logdate"
  Ascii41@174..175 ")"
  Ascii59@175..176 ";"
  Newline@176..177 "\n"

